--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "email-node.js",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "body-parse": "^0.1.0",
